<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_HEADER_FIELDS" Id="{7cb0af49-d0ba-48a7-940c-ab5dc215098e}">
    <Declaration><![CDATA[TYPE ST_HEADER_FIELDS :
STRUCT
	sHost,
	sAccept, 
	sAccept_Language,
	sAccept_Encoding,
	sUser_Agent 		: T_MaxString;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>