<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_HTTP_MESSAGE" Id="{7f24c8f9-18b1-4ba3-9587-772adfc809a2}">
    <Declaration><![CDATA[TYPE ST_HTTP_MESSAGE :
STRUCT
	stRequest_Line : ST_REQUEST_LINE;
	stHeader_Fields : ST_HEADER_FIELDS;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>